--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <header>
-        <a href="#" class="brand"><img src="logo/logo.png" alt="" width="140" height="70"></a>
+        <a href="#" class="brand"><img src="#" alt="" width="140" height="70"></a>
         <div class="menu-btn"></div>
         <div class="navigation">
             <a href="#main">Home</a>
