--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <header>
-        <a href="#" class="brand"><img src="#" alt="" width="140" height="70"></a>
+        <a href="#" class="brand"><img src="logo/logo3.png" alt="" width="140" height="70"></a>
         <div class="menu-btn"></div>
         <div class="navigation">
             <a href="#main">Home</a>
@@ -51,7 +51,7 @@
         <div class="content">
             <div class="column col-left reveal">
                 <div class="img-card">
-                    <img src="images(html, css, js)/picture1.jpg" alt="">
+                    <img src="images(html, css, js)/picture1.png" alt="">
                 </div>
             </div>
             <div class="column col-right reveal">
@@ -207,16 +207,12 @@
         </div>
         <div class="content">
             <div class="row">
-
-                <div class="card reveal">
-                    <div class="contact-icon">
-                        <i class="fas fa-map-marker-alt"></i>
-                    </div>
-                    <div class="info">
-                        <h3>Adress</h3>
-                        <span>Tashkent</span>
-                    </div>
-                </div>
+                <div class="google-map">
+                    <h1>This is our Google Maps web page</h1>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11994.93855349303!2d69.261937!3d41.27111336246405!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b7b0e64517f%3A0x79817e51e9775caf!2sBUKAGYM%20Training%20Center!5e0!3m2!1sru!2sus!4v1697819237600!5m2!1sru!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
+        </div>
+        <div class="content">
+            <div class="row">
 
                 <div class="card reveal">
                     <div class="contact-icon">
@@ -244,7 +240,7 @@
                     </div>
                     <div class="info">
                         <h3>Website</h3>
-                        <span>INCOTRUCK.netfily.app</span>
+                        <a href="https://mirzoyevshahzod.github.io/incotruck.com/">incotruck.com</a>
                     </div>
                 </div>
 
